src/test/ui/error-codes/E0428.stderr
error[E0428]: the name `Bar` is defined multiple times
  --> $DIR/E0428.rs:12:1
   |
11 | struct Bar; //~ previous definition of the type `Bar` here
   | ----------- previous definition of the type `Bar` here
12 | struct Bar; //~ ERROR E0428
   | ^^^^^^^^^^^ `Bar` redefined here
   |
   = note: `Bar` must be defined only once in the type namespace of this module

error: aborting due to previous error

